[package]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
name = "cotton-stm32f746-nucleo"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[lib]
test = false
doctest = false
harness = false

[[bin]]
name = "stm32f746-dhcp-rtic2"
test = false
doctest = false
harness = false

[[bin]]
name = "stm32f746-ssdp-rtic2"
test = false
doctest = false
harness = false

[profile.dev]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
cotton-ssdp = { path = "../../cotton-ssdp", default-features = false, features = [
  "smoltcp",
] }
cotton-netif = { path = "../../cotton-netif", default-features = false }
cotton-unique = { path = "../../cotton-unique", features = ["stm32"] }
smoltcp = { version = "0.11", features = [
  "medium-ethernet",
  "proto-ipv4",
  "socket-udp",
  "socket-tcp",
  "defmt",
  "proto-dhcpv4",
  "socket-dhcpv4",
  "proto-igmp",
], default-features = false }
stm32-eth = { version = "0.6", features = [
  "defmt",
  "stm32f746",
  "smoltcp-phy",
], default-features = false }
ieee802_3_miim = "0.8"
stm32f7xx-hal = { version = "0.7.0" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3.8"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rtic = { version = "2.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0.2", features = ["cortex-m-systick", "systick-64bit"] }
rtic-sync = "1.0.2"
fugit = "0.3"
siphasher = { version = "1", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false, features = [
  "use_spin_nightly",
] }
no-std-net = { version = "0.6", default-features = false }
# Ours is a F74x but the location is the same
stm32-device-signature = { version = "0.3.3", features = ["stm32f76x"] }
