[package]
authors = ["Peter Hartley <peter@electricimp.com>"]
name = "cross-stm32f746-nucleo"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[[bin]]
name = "hello"
test = false
doctest = false
harness = false

[[bin]]
name = "dhcp-rtic"
test = false
doctest = false
harness = false

[dependencies]
cotton-ssdp = { path = "../../cotton-ssdp", default_features = false }
smoltcp = { version = "0.8", features = [ "medium-ethernet", "proto-ipv4", "socket-udp", "socket-tcp", "defmt", "proto-dhcpv4", "socket-dhcpv4" ], default-features = false }
stm32-eth = { version = "0.4", features = ["defmt", "stm32f746", "smoltcp-phy"], default-features = false }
ieee802_3_miim = "0.8"
stm32f7xx-hal = { version = "0.7.0" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
#defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
systick-monotonic = "1.0"
rtic = { package = "cortex-m-rtic", version = "1.0" }
fugit = "0.3"
siphasher = { version = "0.3", default-features = false }
