[package]
authors = ["Peter Hartley <pdh@utter.chaos.org.uk>"]
name = "cotton-stm32f746-nucleo"
publish = false
edition = "2021"
version = "0.0.1"
autotests = false

[lib]
test = false
doctest = false
harness = false

[[bin]]
name = "stm32f746-nucleo-hello"
test = false
doctest = false
harness = false

[[bin]]
name = "stm32f746-nucleo-dhcp-rtic"
test = false
doctest = false
harness = false

[[bin]]
name = "stm32f746-nucleo-ssdp-rtic"
test = false
doctest = false
harness = false

[profile.dev]
opt-level = "s"
lto = true
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
cotton-ssdp = { path = "../../cotton-ssdp", default-features = false, features = [
  "smoltcp",
] }
cotton-netif = { path = "../../cotton-netif", default-features = false }
cotton-unique = { path = "../../cotton-unique", features = ["stm32"] }
smoltcp = { version = "0.12", features = [
  "medium-ethernet",
  "proto-ipv4",
  "socket-udp",
  "socket-tcp",
  "defmt",
  "proto-dhcpv4",
  "socket-dhcpv4",
], default-features = false }
stm32-eth = { version = "0.6", features = [
  "defmt",
  "stm32f746",
  "smoltcp-phy",
], default-features = false }
ieee802_3_miim = "0.8"
stm32f7xx-hal = { version = "0.7.0" }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
systick-monotonic = "1.0"
rtic = { package = "cortex-m-rtic", version = "1.0" }
fugit = "0.3"
siphasher = { version = "1", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false, features = [
  "use_spin_nightly",
] }
no-std-net = { version = "0.6", default-features = false }
# Ours is a F74x but the location is the same
stm32-device-signature = { version = "0.3.3", features = ["stm32f76x"] }
